# morphograph

./: .gitignore  CMakeLists.txt  README.md  archive.sh  archive.zsh  cmake_install.cmake
CMakeScripts/: ReRunCMake.make
docs/: morphograph.maxref.xml
help/: combinatorics.py  morphograph.maxhelp
morphograph.xcodeproj/: project.pbxproj
morphograph.xcodeproj/project.xcworkspace/xcuserdata/jml.xcuserdatad/: UserInterfaceState.xcuserstate
morphograph.xcodeproj/xcshareddata/xcschemes/: morphograph.xcscheme
morphograph.xcodeproj/xcuserdata/jml.xcuserdatad/xcschemes/: xcschememanagement.plist
source/: ext_appendtohandle.h  mgraph.h  mgraph_cpp.h  morphograph.cpp  svg_object.c  svg_object.h
source/cella/: algorithms.h  analysis.h  filewrite.h  svg.h  utilities.h
src/: CMakeLists.txt  Morphograph.h  analysis.h  features.h  morphograph.cpp  parser.h
